kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stanovanjske-zadruge-zemljevid-deployment
  labels:
    app: stanovanjske-zadruge-zemljevid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stanovanjske-zadruge-zemljevid
  template:
    metadata:
      labels:
        app: stanovanjske-zadruge-zemljevid
    spec:
      containers:
        - name: stanovanjske-zadruge-zemljevid
          image: stanovanjske-zadruge-zemljevid
          command:
            - gunicorn
            - stanovanjskeZadrugeZemljevidApi.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
